# compile-time-ecs-prototype

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config_example.yaml  lints.toml  rust-toolchain  rustfmt.toml
all_tuples/: Cargo.toml
all_tuples/src/: all_tuples.rs
db_models/: Cargo.toml
db_models/src/: db_models.rs
engine/engine_strategies/: Cargo.toml
engine/engine_strategies/src/: engine_strategies.rs
engine/esl/: Cargo.toml
engine/esl/examples/: custom_indicator.rs  orderflow.rs  performance_metrics.rs  trackers.rs  yata_indicator.rs  yata_method.rs
engine/esl/src/: backtest.rs  components.rs  esl.rs  events.rs  indicator.rs  inputs.rs  loop_index.rs  metrics.rs  metrics_builder.rs  order.rs  orders.rs  param.rs  plugin.rs  prev.rs  resources.rs  schema.rs  series.rs  stages.rs  strategy_param.rs  ta.rs  types.rs  value.rs
engine/esl/src/backtest/: hlcv_backtest.rs  orderflow_backtest.rs
engine/esl/src/metrics_builder/: block_relays.rs  conditions.rs  simulation_relays.rs
engine/esl/src/ta/: rsi.rs  yata.rs
engine/esl_internal/: Cargo.toml
engine/esl_internal/src/: cuda.rs  esl_internal.rs
engine/esl_macros/: Cargo.toml
engine/esl_macros/src/: esl_macros.rs
engine/esl_utils/: Cargo.toml
engine/esl_utils/src/: esl_utils.rs  mssql.rs
ergnomics/: Cargo.toml
ergnomics/src/: ergnomics.rs  num.rs
inception/inception/: Cargo.toml
inception/inception/src/: config.rs  ecs.rs  ecs_builder.rs  entities.rs  events.rs  inception.rs  input.rs  nest_module.rs  plugin.rs  query.rs  resources.rs  schedule.rs  stage.rs  stages.rs  system.rs  system_param.rs  world.rs
inception/inception_demo/: Cargo.toml
inception/inception_demo/src/: inception_demo.rs
inception/inception_macros/: Cargo.toml
inception/inception_macros/src/: entities_builder_macro.rs  inception_macros.rs  nest_macro.rs  schedule_macro.rs  system_macro.rs  system_param_macro.rs
inception/inception_macros/tests/: test.rs
inception/inception_macros_core/: Cargo.toml
inception/inception_macros_core/src/: inception_macros_core.rs
legacy/config/: Cargo.toml
legacy/config/src/: lib.rs
legacy/converters/src/: from.rs  into.rs  lib.rs  parse.rs
legacy/converters/tests/: enums.rs  structs.rs
legacy/dozer/: Cargo.toml
legacy/dozer/src/: common.rs  compression.rs  hlcv.rs  lib.rs  provider.rs  s3.rs
legacy/dozer/src/provider/: hlcv_provider.rs
legacy/hlcv_loader/: Cargo.toml
legacy/hlcv_loader/src/: lib.rs
legacy/macros/src/: lib.rs
legacy/merovingian/: Cargo.toml
legacy/merovingian/src/: candles.rs  candles_builder.rs  hlcv.rs  minable_models.rs  variable.rs
legacy/mouse/: Cargo.toml
legacy/mouse/src/: definitions.rs  error.rs  ext.rs  handlers.rs  helpers.rs  lib.rs  log.rs  macros.rs  mem.rs  num.rs  stream.rs  thread_pool.rs  traits.rs
legacy/mouse/src/stream/: try_buffered.rs
legacy/nebuchadnezzar/apis/bitmex/src/: client.rs  lib.rs  models.rs  requests.rs  websocket.rs
legacy/nebuchadnezzar/apis/bitmex/src/websocket/: command.rs  message.rs  topic.rs
legacy/nebuchadnezzar/nebuchadnezzar_core/: Cargo.toml
legacy/nebuchadnezzar/nebuchadnezzar_core/src/: client.rs  error.rs  lib.rs  paginators.rs  requests.rs  schema.rs  signatures.rs  websocket.rs
macros_util/: Cargo.toml
macros_util/src/: macros_util.rs
workspace/lstok/: Cargo.toml
workspace/lstok/src/: bench.rs  lstok.rs
