[package]
name = "esl_internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/esl_internal.rs"

[dependencies]
cuda_std = "0.2.2"
num-traits = { version = "0.2.9", default-features = true }
bytemuck = { version = "1.9.1", features = ["derive"] }
