[package]
name = "esl_utils"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2021"

[lib]
name = "esl_utils"
path = "src/esl_utils.rs"

[dependencies]
esl = { path = "../esl" }
merovingian = { path = "../../legacy/merovingian" }
mouse = { path = "../../legacy/mouse" }
config = { path = "../../legacy/config" }
plotters = { version = "0.2.0" }
anyhow = "1.0.70"
num-traits = "0.2.15"
chrono = { version = "0.4.24", features = ["serde"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
tokio = { version = "1.11.0", features = ["full"] }
tracing = "0.1.37"
odbc = "0.17.0"
futures = "0.3.28"
# bytemuck = "1.13.1"
async-stream = "0.3.5"
memmap2 = "0.5.10"
image = "=0.23.0"
jpeg-decoder = "=0.2.6"
rayon-core = "~1.10.0"
bytemuck = "~1.11.0"
