[package]
name = "inception_macros"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
name = "inception_macros"
path = "src/inception_macros.rs"

[dependencies]
inception_macros_core = { path = "../inception_macros_core" }
syn = { version = "1.0", features = ["full"] }
macros_util = { path = "../../macros_util" }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
# We are locked to this version because this crate depends on `toml_edit` with higher MSRV and we
# use specific toolchain version.
proc-macro-crate = "^1.2.0"
convert_case = "0.6.0"
derive-syn-parse = "0.1.5"

[dev-dependencies]
inception = { path = "../inception" }
